fixed spacing again

--- a/index.css
+++ b/index.css
@@ -401,7 +401,7 @@ h3 {
   color: black;
   text-align: center;
   margin-top: 60px;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
 }
 
 #about {
